[package]
name = "zenn-scrap-to-md"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
regex = "1.11.1"
tokio = { version = "1.45.0", features = ["full", "macros"] }
fantoccini = "0.21.5"
dotenv = "0.15.0"
thiserror = "2.0.12"
